# client-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
scripts/: testhelper.py
src/vaultsandbox/: __init__.py  client.py  constants.py  email.py  errors.py  inbox.py  types.py  webhook.py
src/vaultsandbox/crypto/: __init__.py  constants.py  decrypt.py  keypair.py  signature.py  utils.py  validation.py
src/vaultsandbox/http/: __init__.py  api_client.py  base_client.py  chaos_client.py  email_client.py  inbox_client.py  webhook_client.py
src/vaultsandbox/strategies/: __init__.py  delivery_strategy.py  polling_strategy.py  sse_strategy.py
src/vaultsandbox/utils/: __init__.py  datetime_utils.py  email_utils.py  sleep.py  validation.py  webhook_utils.py
tests/: __init__.py  test_api_client.py  test_client.py  test_crypto.py  test_decrypt.py  test_email_auth.py  test_inbox.py  test_integration.py  test_plain_inbox.py  test_readme.py  test_signature.py  test_sse_concurrent.py  test_strategies.py  test_types.py  test_utils.py  test_webhook_utils.py
