[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultsandbox"
version = "0.7.0"
description = "Python SDK for VaultSandbox - Secure, receive-only SMTP server for QA/testing with quantum-safe encryption"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Antero", email = "antero@vaultsandbox.com" }
]
keywords = [
    "email",
    "testing",
    "smtp",
    "quantum-safe",
    "encryption",
    "ml-kem",
    "kyber",
    "qa",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Testing",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pqcrypto>=0.3.4",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://vaultsandbox.com"
Documentation = "https://vaultsandbox.dev"
Repository = "https://github.com/vaultsandbox/client-python"
Issues = "https://github.com/vaultsandbox/client-python/issues"
Discussions = "https://github.com/vaultsandbox/gateway/discussions"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultsandbox"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
